Fix nav bar z-index

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 
 .container {
   position: relative;
+  z-index: -1;
 }
 
 .container > div {
